--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "home-buddy",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://milos3rdnaya.github.io/home-buddy",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
